Add generic AI diagram flow for any config/level/block

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,12 @@ yarn-error.log*
 *.svg
 *.pdf
 *.layout.json
+*.ai.prompt.txt
 # PNG outputs are ignored, except project logo
 *.png
 !diagrammer_logo.png
+out/
+prompts/
 
 # Test scratch
 tests/.tmp/
